--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WOUAmI</string>
     <string name="title_activity_campus_map">Campus Map</string>
+    <string name="title_activity_cal">CalActivity</string>
 </resources>
